# cargo-criterion

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: test_benchmark_external_c_lib.rs  test_benchmarks.rs
ci/: install.sh  script.sh
integration_tests/: Cargo.toml  criterion.toml
integration_tests/benches/: test_benchmark_external_c_lib.rs  test_benchmark_non_criterion.rs  test_benchmarks.rs
integration_tests/tests/: integration_test.rs
src/: analysis.rs  args.rs  bench_target.rs  compile.rs  config.rs  connection.rs  estimate.rs  format.rs  macros_private.rs  main.rs  model.rs  report.rs  stats  value_formatter.rs
src/html/: benchmark_report.html.tt  common.css  history_report.html.tt  index.html.tt  mod.rs  report_link.html.tt  summary_report.html.tt
src/message_formats/: json.rs  mod.rs  openmetrics.rs
src/plot/: mod.rs
src/plot/gnuplot_backend/: distributions.rs  history.rs  iteration_times.rs  mod.rs  pdf.rs  regression.rs  summary.rs  t_test.rs
src/plot/plotters_backend/: distributions.rs  history.rs  iteration_times.rs  mod.rs  pdf.rs  regression.rs  summary.rs  t_test.rs
src/stats/bivariate/: mod.rs
src/stats/univariate/: mod.rs  percentiles.rs  resamples.rs  sample.rs
src/stats/univariate/outliers/: tukey.rs
