[package]
name = "cargo-criterion"
version = "0.1.0"
authors = ["Brook Heisler <redattack34@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"
toml = { version = "0.5", features=["preserve_order"] }
clap = "2.33"
oorandom = "11.1"
cast = "0.2"
num-traits = "0.2"
rayon = "1.3"
chrono = { version = "0.4", features=["serde"] }
anyhow = "1.0"
log = "0.4"
simplelog = "0.8"
atty = "0.2"
lazy_static = "1.4"

[dev-dependencies]
approx = "0.3"
quickcheck = { version = "0.9", default-features = false }
rand = "0.7"